<resources>
    <string name="app_name">Wołomin Tour Guide</string>
    <string name="wolomin">Wołomin</string>
    <string name="about_wolomin">About Wołomin</string>
    <string name="history_wolomin">History of Wołomin</string>
    <string name="wolomin_coordinates">52°20′48″N, 21°14′31″E</string>
    <string name="wolomin_info">The main town of Wołomin County in the Masovian Voivodship. A suburb
        of Warsaw situated 20 km from the capital of Poland, near the railway to Białystok.
        \n\nIt has approximately 37,000 inhabitants and covers an area of 17 sq km (6 sq mi).
        \n\nAlthough the town is relatively young and most of the town\'s inhabitants commute to
        Warsaw on a daily basis, there are a few places to see and interesting people to meet here.</string>
    <string name="history_text">Wołomin was first mentioned in chronicles from the 15th century.
        It remained a small village in central Masovia without much significance. Since 19th century,
        and especially after the foundation of the railway in 1862, Wołomin became a summer holiday
        destination for Warsaw citizens. The Wołomin glassworks were founded in the beginning of the 20th century.
        \n \nWołomin was declared a town in 1919 after the return of Poland\'s sovereignty.
        In 1920 the Polish counter-attack in the Battle of Warsaw was conducted near Wołomin.
        In the interbellum Wołomin retained its status as a multinational town. There was a big
        Jewish and Russian minority. Polish writer Zofia Nałkowska had a house in Wołomin, which
        became an inspiration for her 1925 book House over meadows (Polish: Dom nad łąkami).
        \n \nDuring World War II, the Jews of Wołomin were forced into a ghetto set up by Nazi
        German administration on 15 November 1940, along the railway line between the streets of
        Kobyłkowska, Wspólna, Wiejska, Glinka and Cementowa. The ghetto inmates numbered about 2,700
        people including Jews expelled from other locations. The Judenrat was established in the
        building at 17 Nałkowskiego Street. Deportations aboard Holocaust trains to Treblinka
        extermination camp began on 19 August 1942. The ghetto was liquidated on 6 October 1942.
        A few hundred people (416-620 according to different sources) were shot in the ghetto,
        including many elderly and sick people. Their bodies were buried in a mass grave near the
        Korsaka Road. Some Jews were deported to the Warsaw Ghetto as slave labour and exterminated
        during the Grossaktion Warsaw.
        \n \nAfter the war, Wołomin became a capital of the powiat of Wołomin and started to grow
        rapidly. The window assembly plant was founded and Wołomin soon became a suburb of Warsaw.</string>
    <string name="town_history">History of a town</string>
    <string name="where_to">Where to&#8230;</string>
    <string name="go">Go</string>
    <string name="eat">Eat</string>
    <string name="drink">Drink</string>
    <string name="sleep">Sleep</string>
    <string name="image_description">an image of the location</string>
    <string name="kebab_king">Kebab King</string>
    <string name="kebab_address">Wileńska 17B</string>
    <string name="kebab_info">Middle Eastern and Kurdish cuisine: kebabs – on plate and sandwiches, koftas. Meat and
        vegetarian food. Beer. \n \nMon&#8211;Fri: 10 am &#8211; 11 pm \nSat: 10 am &#8211; 1 am \nSun: 9 am &#8211; 12 pm</string>
    <string name="pobite_talerze">Pobite Talerze</string>
    <string name="pobite_address">Warszawska 21</string>
    <string name="pobite_info">American and European cuisine: hamburgers and chips. Usually (after supply) many regional beers.
        \n \nMon&#8211;Thu: 1 pm &#8211; 10 pm \nFri: 1 pm &#8211; 11 pm \nSat: 12 am &#8211; 11 pm \nSun: 12 am &#8211; 10 pm</string>
    <string name="street_food">Street Food Vegan &#38; Grill</string>
    <string name="street_address">Mieszka I 17</string>
    <string name="street_info">East Mediterranean street food: vegetarian with a lot of dishes for meat lovers too.
        \n \nMon&#8211;Sat: 11 am &#8211; 10 pm \nSun: 12 am &#8211; 10 pm</string>
    <string name="przystanek_w">Przystanek W</string>
    <string name="przystanek_address">Ogrodowa 9</string>
    <string name="przystanek_info">European mix cuisine. A lunch of a day. A few of regional beers in the menu &#8211; always ask a waiter.
        \n \nMon&#8211;Thu: 9 am &#8211; 10 pm \nFri: 9 am &#8211; 12 pm \nSat: 12 am &#8211; 10 pm \nSun: 12 am &#8211; 9 pm</string>
    <string name="wakacje_na_poludniu">Wakacje na południu</string>
    <string name="wakacje_address">Prądzyńskiego 2</string>
    <string name="wakacje_info">Balkan cuisine, mainly Greek, Croatian and Bulgarian. A lot of wines to choose.
    \n \nMon&#8211;Thu: 11 am &#8211; 10 pm \nFri: 11 am &#8211; 11 pm \nSat: 12 am &#8211; 10 pm \nSun: 12 am &#8211; 9 pm</string>
    <string name="obiadek_wilenska">Obiadek Wileńska</string>
    <string name="obiadek_w_address">Wileńska 41</string>
    <string name="obiadek_w_info">Polish traditional lunches and dinners. A special offer for a lunch of a day (soup and main dish).
        \n \nMon&#8211;Fri: 10 am &#8211; 6 pm \nSat&#8211;Sun: closed</string>
    <string name="obiadek_patelnia">Obiadek na patelni</string>
    <string name="obiadek_p_address">Moniuszki 4A</string>
    <string name="obiadek_p_info">Frying Polish traditional food, dumplings and meat dishes.
    \n \nMon&#8211;Fri: 11 am &#8211; 7 pm \nSat: 12 am &#8211; 6 pm\nSun: closed</string>
    <string name="thai_viet">Thai &#38; Viet</string>
    <string name="thai_viet_address">Moniuszki 10</string>
    <string name="thai_viet_info"> Thai and Vietnamese cuisine with Polish ingredients. Almost nothing to drink.
    \n \nMon&#8211;Sun: 11 am &#8211; 9 pm</string>
    <string name="biesiadowo">Biesiadowo</string>
    <string name="biesiadowo_address">Sportowa 10</string>
    <string name="biesiadowo_info">Polish version of Italian cuisine: pizzas.
        \n\nSun&#8211;Thu 11 am &#8211; 10 pm, Fri&#8211;Sat 11 am &#8211; 11 pm</string>
    <string name="pizza_house">Pizza House</string>
    <string name="pizza_house_address">Legionów 58</string>
    <string name="pizza_house_info">Italian cuisine: pizzas, pastas and salads. Poor selections of
        drinks. \n\nMon&#8211;Thu 11 am &#8211; 10 pm \nFri&#8211;Sat 11 am &#8211; 11 pm, \nSun 12 am &#8211; 10 pm</string>
    <string name="ryba">Taaka Ryba</string>
    <string name="ryba_address">Sikorskiego 4</string>
    <string name="ryba_info">For locals – just “Ryba”. A pub for heavy music, motorcycle and fishing
        lovers. A lot of different Polish beers and a few stronger alcohols. On one Tuesday in
        a month – evenings only for ladies. Concerts and exhibitions.</string>
    <string name="wwl_pub">WWL Pub</string>
    <string name="wwl_address">Armii Krajowej 28B</string>
    <string name="wwl_info">A place for fans of dance, hip hop and rap. Disco and karaoke. Only beer
        to drink, snacks to eat. Younger spirit of the town.</string>
    <string name="offside">Offside</string>
    <string name="offside_address">Wileńska 80a</string>
    <string name="offside_info">A place for football fans. Evening with matched on TV. The legendary
        pub of local mafia\’s duels. Closed after shooting in 2011, renewed and opened again under
        different name.</string>
    <string name="perun">Perun</string>
    <string name="perun_address">Kościelna 14</string>
    <string name="perun_info">A pub for real natives &#8211; a bit older town’s inhabitants. Relatively
        cheap beer. Open only till 10 pm. Do you want to feel the climate of a small town? You have to show up here.</string>
    <string name="livia">Livia</string>
    <string name="livia_address">Mariańska 9a</string>
    <string name="livia_info">Feel the climate of ‘80! An old-fashioned hotel with a communistic atmosphere. Rooms with or without bathrooms, TV, radio, internet. A small restaurant for guests in the building.</string>
    <string name="alexandra">Alexandra</string>
    <string name="alexandra_address">1 Maja 22/24</string>
    <string name="alexandra_info">A hostel &#8211; the cheapest bed and breakfast in the town. Quite good conditions as for the price. 24/7 shop with alcohol downstairs. A bit noisy also because the main road in the front of the building.</string>
    <string name="stefaniacy">U Stefaniaków</string>
    <string name="stefaniacy_address">Polna 31</string>
    <string name="stefaniacy_info">A hotel with many years of tradition. Situared almost in the centre of the Town, but also quiet and calm. A restaurant for guests. Breakfast for 15 zł. Parking and wireless internet. They speak English!</string>
    <string name="mysliwski">Dom Myśliwski</string>
    <string name="mysliwski_address">Krasickiego 37, Kobyłka</string>
    <string name="mysliwski_info">“A hunter\’s home” &#8211; hostel situated on the borders of two towns: Wołomin and Kobyłka, nearby Grabicz park &#8211; unique bird’s preserve (look into “Go” category to find out more). A very quiet place. Speciality of the house: home-made bread.</string>
    <string name="trylogia">Trylogia</string>
    <string name="trylogia_address">Poniatowskiego 46, Zielonka</string>
    <string name="trylogia_info">Exclusive hotel near Wołomin with climate coming from 17th, 18th and 19th century. SPA, jacuzzi and museum. A restaurant “Dwór Rozłogi” with traditional Polish and hunt\’s dishes for all guests. Forest nearby.</string>
    <string name="strawbale">Straw bale house</string>
    <string name="strawbale_address">Racławicka 102, Majdan</string>
    <string name="strawbale_info">Remember the story about three pigs? This unusual green house built by the owners themselves with straw, clay and wood surely survive more than that. How to build in harmony with nature? Come and inspire yourself. Visits only by appointments.</string>
    <string name="kultura_cinema">Kultura Cinema</string>
    <string name="kultura_address">Mickiewicza 8</string>
    <string name="kultura_info">A cinema in good, old style. Something for those, who don’t like modern multiplexes, but like contemporary movies. You won’t drink here a fancy coffee, but seeing cinema\’s beautiful old-fashioned wooden floor it\’s worth this sacrifice!</string>
    <string name="nalkowski_museum">Zofia and Wacław Nałkowski Museum></string>
    <string name="nalkowski_address">Nałkowskiego 17</string>
    <string name="nalkowski_info">A biographical museum  dedicated to an esteemed geographer, a father of Polish modern geography Wacław Nałkowski and his daughter Zofia, a famous Polish writer. “House at the Fields”, as it was called by Zofia while she was living here, today is full of souvenirs of them.</string>
    <string name="ossow">Ossów</string>
    <string name="ossow_address">Matarewicza 148, Ossów</string>
    <string name="ossow_info">A small village south of Wołomin &#8211; in 1920 a witness of the famous battle of Warsaw, which refers to the decisive Polish victory during the Polish–Soviet War. Poland repulsed and defeated the invading Red Army. Cemetery from 1920 and monuments to Polish and Russian victims of battle of Ossów.</string>
    <string name="wooden_house">Wooden architecture</string>
    <string name="wooden_address">Piłsudskiego 5</string>
    <string name="wooden_info">An old wooden house built in the typical style for a summer resorts in the Masovia region before World War II, but with completely different purpose. In 1930–1937 it was an orthodox chapel of St. St. Peter and Paul.</string>
    <string name="panorama">Panorama of Warsaw</string>
    <string name="panorama_address">Chrobrego 3</string>
</resources>