<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            tools:src="@drawable/wolomin_panorama" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:padding="@dimen/standard_padding"
            android:textSize="@dimen/title_size"
            tools:text="@string/about_wolomin" />

        <TextView
            android:id="@+id/address_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:padding="@dimen/standard_padding"
            android:textSize="@dimen/bigger_text"
            tools:text="@string/wolomin_coordinates" />

        <TextView
            android:id="@+id/location_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:padding="@dimen/standard_padding"
            android:textSize="@dimen/normal_text"
            tools:text="@string/wolomin_info" />

    </LinearLayout>
</layout>