<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/location_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_description"
        android:scaleType="center"
        tools:src="@drawable/wolomin_panorama" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/location_image"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin">

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="bottom"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            tools:text="@string/about_wolomin" />

        <TextView
            android:id="@+id/location_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="serif"
            android:gravity="top"
            android:maxLines="2"
            android:paddingTop="@dimen/small_margin"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text"
            tools:text="@string/wolomin_coordinates" />

    </LinearLayout>
</RelativeLayout>